# backend

./: .coverage  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: audit.py  config.py  db.py  dependencies.py  redis.py  security.py
app/models/: __init__.py  answer.py  game.py  question.py  team.py  token.py  user.py
app/repositories/: answer.py  base.py  game.py  question.py  team.py  token.py  user.py
app/routers/: auth.py  demo.py  games.py  questions.py  sse.py  stats.py  teams.py  users.py  ws.py
app/schemas/: answer.py  game.py  question.py  stats.py  team.py  token.py  user.py
app/services/: answer.py  auth.py  game.py  question.py  stats.py  team.py  user.py
app/static/: demo.html
migrations/: env.py
migrations/versions/: 3ea9d360bd11_initial_schema.py  a1b2c3d4e5f6_normalize_question_options.py  c8dfc8953113_add_middle_name_to_users.py
tests/: conftest.py  test_answers.py  test_auth.py  test_games.py  test_question_options.py  test_questions.py  test_sse.py  test_stats.py  test_teams.py  test_users.py  test_ws.py
